# mcp-manager

./: .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: releasing.md
public/branding/: README.md
scripts/: github-release.mjs  github-release.test.mjs  release-args.mjs  release-args.test.mjs  release-workflow.test.mjs  release.mjs  workflow-actions.test.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/adapters/: antigravity.rs  claude_code.rs  claude_desktop.rs  cline.rs  codex.rs  cursor.rs  gemini_cli.rs  github_copilot.rs  iflow.rs  kiro.rs  mod.rs  opencode.rs  qwen_code.rs  vscode.rs  windsurf.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: AppLogo.tsx  Dashboard.test.tsx  Dashboard.tsx  LanguageMenu.tsx  ServerEditor.tsx  SettingsPage.test.tsx  SettingsPage.tsx  ToastViewport.tsx  Tooltip.tsx  clientMeta.tsx
src/i18n/: index.ts
src/services/: appPreferences.ts  appVersion.test.ts  appVersion.ts  clientDetectionUi.test.ts  clientDetectionUi.ts  configService.ts  configSync.test.ts  configSync.ts  externalLinks.ts  jsonParser.test.ts  jsonParser.ts  nativeDialogs.test.ts  nativeDialogs.ts  pendingChanges.test.ts  pendingChanges.ts  (+9 more)
(+6 files in other folders)
